[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/Boss/Boss Healthbar/Boss Health Over.png" type="Texture" id=1]
[ext_resource path="res://Assets/SFX/BossHit.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Boss/boss eye.png" type="Texture" id=3]
[ext_resource path="res://Assets/Boss/Boss Healthbar/Boss Health Under.png" type="Texture" id=4]
[ext_resource path="res://Assets/Boss/Boss Healthbar/Boss Health Progress.png" type="Texture" id=5]
[ext_resource path="res://Charecters/Boss.gd" type="Script" id=6]
[ext_resource path="res://Charecters/BaseSpriteBounce.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/GuyGood/Shadow.png" type="Texture" id=8]
[ext_resource path="res://Assets/Boss/boss head.png" type="Texture" id=9]
[ext_resource path="res://UI/DialogBox.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Boss/boss eye-hand whiteout.png" type="Texture" id=11]
[ext_resource path="res://Assets/Boss/boss hand.png" type="Texture" id=12]
[ext_resource path="res://Assets/Boss/boss head whiteout.png" type="Texture" id=13]
[ext_resource path="res://Assets/Boss/boss torso.png" type="Texture" id=14]
[ext_resource path="res://Assets/Boss/boss hand whiteout.png" type="Texture" id=15]
[ext_resource path="res://Assets/Boss/boss torso whiteout.png" type="Texture" id=16]
[ext_resource path="res://Assets/Boss/Boss Healthbar/Boss Health Over Alt.png" type="Texture" id=17]

[sub_resource type="Animation" id=1]
resource_name = "Celebrate"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Torso/LeftArm:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -7.22618, -13.8122 ), Vector2( -7.31216, -15.4888 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Torso/RightArm:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 7.15919, -11.8702 ), Vector2( 7.63206, -13.6328 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Torso:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/Torso:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Dying"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Torso:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.226, 0 ), Vector2( -0.316, 0 ), Vector2( 0, -0.442 ), Vector2( 0, 0.4 ), Vector2( -0.332, -0.408 ), Vector2( 0.516, 0.29 ), Vector2( -0.908, 0.29 ), Vector2( 0.356, -0.528 ), Vector2( -0.456, -0.264 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Torso:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Torso:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Torso:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Torso/RightArm:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -4.259, 0.21 ), Vector2( 19.135, 0.21 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/Torso/LeftArm:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 29.94, -3.108 ), Vector2( -5.63559, -3.10798 ) ]
}

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Torso:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Torso:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Torso/LeftArm:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5.63559, -3.10798 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/Torso/RightArm:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5.74056, 0.209625 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Torso:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ), Vector2( 0, 1 ), Vector2( 0, -1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Torso:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Torso/RightArm:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5.74056, 0.209625 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/Torso/LeftArm:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5.63559, -3.10798 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Torso:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -600 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Torso:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Shadow:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpringySprites:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4, 9 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 3, 4 )

[sub_resource type="Animation" id=9]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Torso/Torso3:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Torso/Torso:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Torso/Torso2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpringySprites/Head:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpringySprites/Head2:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SpringySprites/LeftEye:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SpringySprites/LeftEye2:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("SpringySprites/RightEye:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("SpringySprites/RightEye2:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("SpringySprites/LeftArm:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("SpringySprites/LeftArm2:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("SpringySprites/RightArm:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("SpringySprites/RightArm2:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("SpringySprites/Head3:self_modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 1, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("SpringySprites/LeftArm3:self_modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 1, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("SpringySprites/RightArm3:self_modulate")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 1, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("SpringySprites/RightEye3:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("SpringySprites/LeftEye3:visible")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("Body/Shadow:self_modulate")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/19/type = "value"
tracks/19/path = NodePath(".:z_index")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 2166 ]
}

[node name="Boss" type="Node2D" groups=[
"bad_guys",
]]
scale = Vector2( 4, 4 )
script = ExtResource( 6 )

[node name="Body" type="Node2D" parent="."]
position = Vector2( 0, -5 )

[node name="Torso" type="Position2D" parent="Body"]

[node name="Torso" type="Sprite" parent="Body/Torso"]
texture = ExtResource( 14 )

[node name="Torso3" type="Sprite" parent="Body/Torso"]
self_modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 16 )

[node name="Torso2" type="Sprite" parent="Body/Torso"]
visible = false
self_modulate = Color( 1, 1, 1, 0.588235 )
z_index = 100
texture = ExtResource( 14 )

[node name="Head" type="Position2D" parent="Body/Torso"]
visible = false
position = Vector2( 0, -10 )

[node name="LeftEye" type="Position2D" parent="Body/Torso/Head"]
visible = false
position = Vector2( -0.5, -1 )

[node name="RightEye" type="Position2D" parent="Body/Torso/Head"]
visible = false
position = Vector2( 2, -1 )

[node name="RightArm" type="Position2D" parent="Body/Torso"]
visible = false
position = Vector2( 5.74056, 0.209625 )

[node name="LeftArm" type="Position2D" parent="Body/Torso"]
visible = false
position = Vector2( -5.63559, -3.10798 )

[node name="Shadow" type="Sprite" parent="Body"]
self_modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
position = Vector2( 0, 5 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Celebrate = SubResource( 1 )
anims/Dying = SubResource( 2 )
anims/Fists = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Run = SubResource( 5 )
anims/Summon = SubResource( 6 )

[node name="SpringySprites" type="Node2D" parent="."]

[node name="Head" parent="SpringySprites" instance=ExtResource( 7 )]
position = Vector2( 0, -15 )
scale = Vector2( -1, 1 )
texture = ExtResource( 9 )
stiffness = 4.0
damping = 0.6
target_node_path = NodePath("../../Body/Torso/Head")

[node name="Head3" parent="SpringySprites" instance=ExtResource( 7 )]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -15 )
scale = Vector2( -1, 1 )
texture = ExtResource( 13 )
stiffness = 4.0
damping = 0.6
target_node_path = NodePath("../../Body/Torso/Head")

[node name="Head2" parent="SpringySprites" instance=ExtResource( 7 )]
visible = false
self_modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 0, -15 )
scale = Vector2( -1, 1 )
z_index = 100
texture = ExtResource( 9 )
stiffness = 4.0
damping = 0.6
target_node_path = NodePath("../../Body/Torso/Head")

[node name="LeftEye" parent="SpringySprites" instance=ExtResource( 7 )]
position = Vector2( -0.5, -16 )
texture = ExtResource( 3 )
stiffness = 3.0
damping = 0.6
target_node_path = NodePath("../../Body/Torso/Head/LeftEye")

[node name="LeftEye3" parent="SpringySprites" instance=ExtResource( 7 )]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -0.5, -16 )
texture = ExtResource( 11 )
stiffness = 3.0
damping = 0.6
target_node_path = NodePath("../../Body/Torso/Head/LeftEye")

[node name="LeftEye2" parent="SpringySprites" instance=ExtResource( 7 )]
visible = false
self_modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( -0.5, -16 )
z_index = 100
texture = ExtResource( 3 )
stiffness = 3.0
damping = 0.6
target_node_path = NodePath("../../Body/Torso/Head/LeftEye")

[node name="RightEye" parent="SpringySprites" instance=ExtResource( 7 )]
position = Vector2( 2, -16 )
texture = ExtResource( 3 )
stiffness = 3.0
damping = 0.6
target_node_path = NodePath("../../Body/Torso/Head/RightEye")

[node name="RightEye3" parent="SpringySprites" instance=ExtResource( 7 )]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 2, -16 )
texture = ExtResource( 11 )
stiffness = 3.0
damping = 0.6
target_node_path = NodePath("../../Body/Torso/Head/RightEye")

[node name="RightEye2" parent="SpringySprites" instance=ExtResource( 7 )]
visible = false
self_modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 2, -16 )
z_index = 100
texture = ExtResource( 3 )
stiffness = 3.0
damping = 0.6
target_node_path = NodePath("../../Body/Torso/Head/RightEye")

[node name="LeftArm" parent="SpringySprites" instance=ExtResource( 7 )]
position = Vector2( -5.63559, -8.10798 )
texture = ExtResource( 12 )
stiffness = 4.2
damping = 0.6
target_node_path = NodePath("../../Body/Torso/LeftArm")

[node name="LeftArm3" parent="SpringySprites" instance=ExtResource( 7 )]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -5.63559, -8.10798 )
texture = ExtResource( 15 )
stiffness = 4.2
damping = 0.6
target_node_path = NodePath("../../Body/Torso/LeftArm")

[node name="LeftArm2" parent="SpringySprites" instance=ExtResource( 7 )]
visible = false
self_modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( -5.63559, -8.10798 )
z_index = 100
texture = ExtResource( 12 )
stiffness = 4.2
damping = 0.6
target_node_path = NodePath("../../Body/Torso/LeftArm")

[node name="RightArm" parent="SpringySprites" instance=ExtResource( 7 )]
position = Vector2( 5.74056, -4.79037 )
texture = ExtResource( 12 )
stiffness = 4.2
damping = 0.6
target_node_path = NodePath("../../Body/Torso/RightArm")

[node name="RightArm3" parent="SpringySprites" instance=ExtResource( 7 )]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 5.74056, -4.79037 )
texture = ExtResource( 15 )
stiffness = 4.2
damping = 0.6
target_node_path = NodePath("../../Body/Torso/RightArm")

[node name="RightArm2" parent="SpringySprites" instance=ExtResource( 7 )]
visible = false
self_modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 5.74056, -4.79037 )
z_index = 100
texture = ExtResource( 12 )
stiffness = 4.2
damping = 0.6
target_node_path = NodePath("../../Body/Torso/RightArm")

[node name="Line2D" type="Line2D" parent="."]
visible = false
show_behind_parent = true
z_index = -1

[node name="Areas" type="Node2D" parent="."]
position = Vector2( 0, -5 )

[node name="Hurtbox" type="Area2D" parent="Areas"]
collision_layer = 4
collision_mask = 68

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Hurtbox"]
position = Vector2( 0, -5 )
shape = SubResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="Hitbox" type="Area2D" parent="Areas"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Hitbox"]
shape = SubResource( 8 )
__meta__ = {
"_editor_description_": ""
}

[node name="MoveTo" type="Position2D" parent="."]

[node name="WanderWait" type="Timer" parent="."]
one_shot = true

[node name="WanderStuck" type="Timer" parent="."]

[node name="Sounds" type="Node2D" parent="."]

[node name="Hit" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 2 )
attenuation = 5.65685

[node name="BlackForeground" type="Tween" parent="."]

[node name="HealthBarTween" type="Tween" parent="."]

[node name="WhiteFlash" type="Tween" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="Taunt" parent="CanvasLayer" instance=ExtResource( 10 )]
pause_mode = 2
dialog = PoolStringArray( "Catch me if you can." )

[node name="BlackForeground" type="ColorRect" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -395.0
margin_top = 20.0
margin_right = -263.0
margin_bottom = 44.0
rect_scale = Vector2( 6, 6 )
mouse_filter = 2
max_value = 60.0
step = 0.5
value = 60.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox" parent="CanvasLayer" instance=ExtResource( 10 )]
pause_mode = 2
dialog = PoolStringArray( "You weren\'t supposed to do that.", "I thought I was the Uncurable Plague.", "Perhaps I was too harsh to this world.", "Or may be this world was too harsh to me.", "I wish I could have seen more places.", "Conquer this world for me will you\?", " Make the world see how much greatness lies in you." )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -395.0
margin_top = 20.0
margin_right = 397.0
margin_bottom = 164.0
mouse_filter = 2
texture = ExtResource( 17 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathAnim" type="AnimationPlayer" parent="."]
anims/death = SubResource( 9 )
[connection signal="area_entered" from="Areas/Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="Areas/Hurtbox" to="." method="_on_Hurtbox_area_exited"]
[connection signal="area_entered" from="Areas/Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="WanderStuck" to="." method="_on_WanderStuck_timeout"]
